applications/pipeline/helm/manifests/platform-kubernetes-native-resources.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: '8888'
    prometheus.io/scheme: http
    prometheus.io/scrape: 'true'
  labels:
    app.kubernetes.io/component: ml-pipeline
    app.kubernetes.io/name: kubeflow-pipelines
    application-crd-id: kubeflow-pipelines
  name: ml-pipeline
  namespace: kubeflow
spec:
  ports:
  - name: http
    port: 8888
    protocol: TCP
    targetPort: 8888
  - name: grpc
    port: 8887
    protocol: TCP
    targetPort: 8887
  - name: webhook
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: ml-pipeline
    app.kubernetes.io/component: ml-pipeline
    app.kubernetes.io/name: kubeflow-pipelines
    application-crd-id: kubeflow-pipelines
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ml-pipeline
    app.kubernetes.io/component: ml-pipeline
    app.kubernetes.io/name: kubeflow-pipelines
    application-crd-id: kubeflow-pipelines
  name: ml-pipeline
  namespace: kubeflow
spec:
  selector:
    matchLabels:
      app: ml-pipeline
      app.kubernetes.io/component: ml-pipeline
      app.kubernetes.io/name: kubeflow-pipelines
      application-crd-id: kubeflow-pipelines
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: 'true'
      labels:
        app: ml-pipeline
        app.kubernetes.io/component: ml-pipeline
        app.kubernetes.io/name: kubeflow-pipelines
        application-crd-id: kubeflow-pipelines
    spec:
      containers:
      - args:
        - --config=/config
        - --sampleconfig=/config/sample_config.json
        - -logtostderr=true
        - --webhookTLSCertPath=/etc/webhook/certs/tls.crt
        - --webhookTLSKeyPath=/etc/webhook/certs/tls.key
        - --pipelinesStoreKubernetes=true
        command:
        - /bin/apiserver
        image: ghcr.io/kubeflow/kfp-api-server:2.17.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /apis/v1beta1/healthz
            port: 8888
          initialDelaySeconds: 3
          periodSeconds: 5
          timeoutSeconds: 2
        name: ml-pipeline-api-server
        ports:
        - containerPort: 8443
          name: webhook
        - containerPort: 8888
          name: http
        - containerPort: 8887
          name: grpc
        readinessProbe:
          httpGet:
            path: /apis/v1beta1/healthz
            port: 8888
          initialDelaySeconds: 3
          periodSeconds: 5
          timeoutSeconds: 2
        resources:
          requests:
            cpu: 250m
            memory: 500Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsGroup: 0
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
        startupProbe:
          failureThreshold: 12
          httpGet:
            path: /apis/v1beta1/healthz
            port: 8888
          periodSeconds: 5
          timeoutSeconds: 2
        volumeMounts:
        - mountPath: /etc/webhook/certs
          name: webhook-certs
          readOnly: true
        - mountPath: /etc/mlflow-tracking-ca
          name: mlflow-tracking-ca
          readOnly: true
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: ml-pipeline
      volumes:
      - name: webhook-certs
        secret:
          secretName: kfp-api-webhook-cert
      - configMap:
          name: mlflow-tracking-ca
          optional: true
        name: mlflow-tracking-ca
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: kubeflow/kfp-api-webhook-cert
  name: pipelineversions.pipelines.kubeflow.org
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: ml-pipeline
      namespace: kubeflow
      path: /webhooks/mutate-pipelineversion
      port: 8443
  failurePolicy: Fail
  name: pipelineversions.pipelines.kubeflow.org
  rules:
  - apiGroups:
    - pipelines.kubeflow.org
    apiVersions:
    - v2beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - pipelineversions
    scope: Namespaced
  sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: kubeflow/kfp-api-webhook-cert
  name: pipelineversions.pipelines.kubeflow.org
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: ml-pipeline
      namespace: kubeflow
      path: /webhooks/validate-pipelineversion
      port: 8443
  failurePolicy: Fail
  name: pipelineversions.pipelines.kubeflow.org
  rules:
  - apiGroups:
    - pipelines.kubeflow.org
    apiVersions:
    - v2beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - pipelineversions
    scope: Namespaced
  sideEffects: None
